--- a/TODO
+++ b/TODO
@@ -4,7 +4,7 @@ I will clean up all this when the project reaches a stable state.
 
  * -l switch that prints limits (filenum, sizes, etc.)
  * fix that goddam hell of var-types (llong, ulong, double, etc.)
- * progress output: respect terminal width
+ * progress output: respect terminal width, redesign
  * signal handling (delete incomplete on interrupt)
  * error messages: reduce, rewrite texts
  * overflow protection for large vars (size, etc.)
@@ -13,3 +13,16 @@ I will clean up all this when the project reaches a stable state.
  * code BEAUTIFYing (should go along anyway)
  * last but probably most important: DOCUMENTATION! (readme, proper
    homepage, github-wiki, etc.)
+
+
+Known bugs:
+
+	* on a i686 machine with only some mb left of free memory:
+	
+		vcp: malloc.c:3074: sYSMALLOc: Assertion `(old_top == (((mbinptr)
+		(((char *) &((av)->bins[((1) - 1) * 2])) - __builtin_offsetof
+		(struct malloc_chunk, fd)))) && old_size == 0) || ((unsigned long)
+		(old_size) >= (unsigned long)((((__builtin_offsetof(struct
+		malloc_chunk, fd_nextsize))+((2 * (sizeof(size_t))) - 1)) & 
+		~((2 * (sizeof(size_t))) - 1))) && ((old_top)->size & 0x1) && 
+		((unsigned long)old_end & pagemask) == 0)' failed.
