--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,20 @@
-2009-09-29	added CHANGELOG to provide more detailed information than
-			the git-commit-summaries
+2009-09-29	- Added CHANGELOG to provide more detailed information than
+			  the git-commit-summaries
+			  
+			- Switched data structure for file lists from double linked
+			  lists to array-based ones.
+			  This was done because of the much simpler code compared to
+			  all that pointer stuff in the version with linked lists. I
+			  think this change does not mean any disadvantage in memory
+			  consumption because only the pointers to the items need to
+			  be stored and therefore the array itself should not get a
+			  significant size.
+			  
 2009-09-25	added dynamic limits information, some cleanup
+
 2009-09-25	some fixes, added bugs to TODO
+
 2009-09-24	usage information, updated TODOs, added proper license
 			information, added git-ignores to keep binaries out
+
 2009-09-23	initial commit
