--- a/TODO
+++ b/TODO
@@ -1,10 +1,10 @@
 These are short notes for me, not intended to be clear for everyone.
 I will clean up all this when the project reaches a stable state.
 
+ * fix progress output left on successful termination
+ * clean up copy_file()
  * attach reasons for fails to failed-file-list
  * fix that goddam hell of var-types (llong, ulong, double, etc.)
- * progress output: respect terminal width, redesign
- * progress output: output for small files
  * signal handling (delete incomplete on interrupt)
  * error messages: reduce, rewrite texts
  * overflow protection for large vars (size, etc.)
