--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 							vcp - verbose cp
 
-						(c) copyright lynix 2009
+                      (c) copyright lynix 2009, 2010
 
 SUMMARY
 --------------------------
