--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+2010-01-22  Fixed -d switch.
+
 2010-01-18	Added O_TRUNC to open bitmask.
 
 2010-01-06  Almost a rewrite, so lots of things changed. The big ones:
